--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -21,7 +21,9 @@
 		{% for current_widget in content%}
 		{% widget current_widget.name user %}
 		{% endfor %}
+		&nbsp;<br/>&nbsp;<br/>
 	</ul>
 	{% endfor %}
 </div>
+
 {% endblock %} 
