--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -161,7 +161,10 @@
 			</div>
 			{% endblock %} <div class="closed-bar"></div>
 			{% if service_status%}
-			<div class="kermitfooter">{{service_status}}</div>
+			<div class="kermitfooter">
+				<img src="{{static_url}}images/icons/{% if service_status.restserver %}online.png{% else %}offline.png{% endif %}" style="border: 0px; height: 10px;margin: 0px;float:none;"/>
+				{% trans 'RestServer' %} ({{service_status_url}})
+			</div>
 			{% endif %}
 		</div>
 		<div class="footer"></div>
