--- a/static/css/datatable/demo_table.css
+++ b/static/css/datatable/demo_table.css
@@ -32,7 +32,7 @@
 
 .dataTables_wrapper {
 	position: relative;
-	min-height: 302px;
+	padding-bottom: 20px;
 	clear: both;
 	_height: 302px;
 	zoom: 1; /* Feeling sorry for IE */
