Changed widget default position and name Autoexpanded Tree on Server details Renamed Admin Link Rename Search field for System Status Widget

--- a/templates/admin/includes_grappelli/header.html
+++ b/templates/admin/includes_grappelli/header.html
@@ -30,7 +30,7 @@
             </li>
             <!-- Userlinks -->
             {% block userlinks %}
-            	<li><a href="{% url main_kermit %}">{% trans 'Back to Kermit' %}</a></li>
+            	<li><a href="{% url main_kermit %}">{% trans 'Back to Dashboard' %}</a></li>
                 <!-- JS tests -->
                 {% url test-index as testindexurl %}
                 {% if testindexurl %}
