--- a/templates/platforms/weblogic/instance.html
+++ b/templates/platforms/weblogic/instance.html
@@ -6,6 +6,7 @@
 	<strong>{% trans 'Server Name' %}</strong>: {{instance.machine}} <br/>
 	<strong>{% trans 'Listen Address' %}</strong>: {{instance.listen_address}} <br/>
 	<strong>{% trans 'Listen Port' %}</strong>: {{instance.listen_port}} <br/>
+	<strong>{% trans 'Java Version' %}</strong>: {{java_version}} <br/>
 	{% if instance.arguments%}
 	<br>
 	<strong>{% trans 'Instance Arguments'%}</strong>
