Changed context menu SQL name

--- a/templates/widgets/puppetclasses/puppetclasses.html
+++ b/templates/widgets/puppetclasses/puppetclasses.html
@@ -279,7 +279,7 @@
 		{% endif %}
 		{% if sqldeployment %}
 		<li class="icon">
-			<span class="icon folder"></span>Deploy SQL
+			<span class="icon folder"></span>SQL
 			<ul>
 				{%for depsqlop in sqldeployment.operations %}
 				<li class="icon" type="sqldeploy" action="{{depsqlop}}">
