Refactored ContextMenu Operation (Now Module can Inject Operation in the ContextMenu) Created Deploy Operation For JBoss Refactored OC4J Redeploy Operation Removed AppDeploy App

--- a/templates/platforms/oc4j/deployform.html
+++ b/templates/platforms/oc4j/deployform.html
@@ -11,7 +11,7 @@
 		$('.errorlist').remove();
 		// prepare Options Object
 		var options = {
-			url : '{% url redeploy_app filters "deploy-dialog" "xhr" %}', // Here we pass the xhr flag
+			url : '{% url oc4j_redeploy_app filters "deploy-dialog" "xhr" %}', // Here we pass the xhr flag
 			dataType : 'json',
 			success : parseResponse,
 			error: parseError,
@@ -19,43 +19,11 @@
 		};
 		// bind form using ajaxForm
 		$('#tf').ajaxForm(options);
-		$("#id_servertype").change(function() {
-			$.ajax({
-				// The link we are accessing.
-				url : '{{base_url}}/appdeploy/instancelist/{{filters}}/' + this.value +'/',
-				// The type of request.
-				type : "get",
-				// The type of data that is getting returned.
-				dataType : "json",
-				error : function() {
-					//TODO: Show error message
-					alert("Server communication error. Cannot get instances list for selected server");
-					$('#loading').hide();
-				},
-				beforeSend : function() {
-					$('#loading').show();
-				},
-				complete : function() {
-					$('#loading').hide();
-				},
-				success : function(data) {
-					$("#id_instancename").empty();
-					if (data.errors) {
-						alert(data.errors);
-					} else {
-						for(i in data.instances) {
-							content = "<option value='" + data.instances[i] + "'>" + data.instances[i] + "</option>";
-							$(content).appendTo("#id_instancename");
-						}
-					}
-				}
-			});
-		});
 		
 		$("#id_types").change(function() {
 			$.ajax({
 				// The link we are accessing.
-				url : '{{base_url}}/appdeploy/applist/{{filters}}/' + this.value +'/',
+				url : '{{base_url}}/platform/oc4j/applist/{{filters}}/' + this.value +'/',
 				// The type of request.
 				type : "get",
 				// The type of data that is getting returned.
@@ -84,7 +52,37 @@
 				}
 			});
 		});
-		//My form id is 'tf'
+		
+		$.ajax({
+				// The link we are accessing.
+				url : '{{base_url}}/platform/oc4j/instancelist/{{filters}}/',
+				// The type of request.
+				type : "get",
+				// The type of data that is getting returned.
+				dataType : "json",
+				error : function() {
+					//TODO: Show error message
+					alert("Server communication error. Cannot get instances list for selected server");
+					$('#loading').hide();
+				},
+				beforeSend : function() {
+					$('#loading').show();
+				},
+				complete : function() {
+					$('#loading').hide();
+				},
+				success : function(data) {
+					$("#id_instancename").empty();
+					if (data.errors) {
+						alert(data.errors);
+					} else {
+						for(i in data.instances) {
+							content = "<option value='" + data.instances[i] + "'>" + data.instances[i] + "</option>";
+							$(content).appendTo("#id_instancename");
+						}
+					}
+				}
+			});
 	});
 	
 	function parseResponse(data) {
@@ -147,7 +145,7 @@
 <div id="emsg">
 	&nbsp;
 </div>
-<form action="{% url redeploy_app filters 'deploy-dialog' None%}" method="post" id="tf">
+<form action="{% url oc4j_redeploy_app filters 'deploy-dialog' None%}" method="post" id="tf">
 	{% csrf_token %}
 		{{ form.as_p }}
 		<br/>
