--- a/templates/widgets/puppetclasses/puppetclasses.html
+++ b/templates/widgets/puppetclasses/puppetclasses.html
@@ -37,16 +37,18 @@
 				if($(this).attr('type') == "agent") {
 					getExecutionForm('{{settings.BASE_URL}}', 'context-execution-dialog', $(this).attr('agent'), $(this).attr('action'), filtersList, 'response-container')
 				} else if($(this).attr('type') == "operation") {
-					var url = $(this).attr('url');
-					//Supposing that all default operations are unfiltered
-					//TODO: Make a complete refactor of this part
-					url = url.replace('no-filter', filtersList);
+					var action = $(this).attr('action');
+					var agent = $(this).attr('agent');
+					var parameters = $(this).attr('parameters');
 					base_url = "{{settings.BASE_URL}}";
 					if (base_url.substr(-1) === "/" ) {
 						var strLen = base_url.length;
 						base_url = base_url.slice(0,strLen-1);
 					}
-					url = base_url + url;
+					url = base_url + "/restapi/mcollective/" + filtersList + '/' + agent + '/' + action + '/';
+					if (parameters!=null && parameters!='') {
+						url = url + parameters;
+					}
 					sendRequestToMcollective(url, 'response-container');			
 				} else if ($(this).attr('type') == "sqldeploy") {
 					getSqlDeployForm('{{settings.BASE_URL}}', 'deploy-dialog', $(this).attr('action'), filtersList)	
@@ -278,7 +280,7 @@
 			<span class="icon folder"></span>Operations
 			<ul>
 				{%for op in operations %}
-				<li class="icon" type="operation" url="{{op.url}}">
+				<li class="icon" type="operation" agent="{{op.agent.name}}" action="{{op.action.name}}" parameters={{op.parameters}}>
 					<span class="icon file"></span>{{op.name}}
 				</li>
 				{% endfor %}
